# stormworks_mc_editor

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  stormworks_mc_editor.code-workspace  test.ts  tsconfig.json
src/: cli.ts  index.ts  test.ts
src/core/: compiler-context.ts  compiler.ts  compiler.ts.old  component.ts  index.ts  microcontroller.ts  sw-mapping.ts  types.ts
src/std/: constants.ts  index.ts  io.ts  logic.ts  math.ts
src/std/blocks/: arithmetic.ts  composite.ts  control.ts  io.ts  logical.ts  property.ts  switchbox.ts
src/std/functions/: arithmetic.ts  composite.ts  control.ts  io.ts  logical.ts  property.ts  switchbox.ts
src/stormworks/: __init__.py  models.py
