[project]
name = "sw-mc-compiler"
version = "0.1.0"
description = ""
authors = [
    {name = "Antoine Buirey",email = "91411073+AntoineBuirey@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "sw_mc_compiler", from = "src"},{include = "stormworks", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
